Center and set colour of text block and fix up embed width and align

--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,8 @@ main div.hero p {
 
 }
 
+main div.embed-container {
+	text-align: center;
+	max-width: 640px;
+	margin: auto;
+}
