--- a/styles/blocks/cards.css
+++ b/styles/blocks/cards.css
@@ -3,6 +3,7 @@ main div.cards {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    background-color: #f5f5f5;
 } 
 
 main div.cards > div{
@@ -10,6 +11,7 @@ main div.cards > div{
     flex-direction: column;
     width: 33%;
     padding: 32px;
+    text-align: center;
 } 
 
 main div.cards > div img{
